@@ -209,7 +209,7 @@ static void SCR_DrawCenterString (void)
 
 	FindTextBreaks(scr_centerstring, 38);
 
-	by = (25-lines) * 8 / 2;
+	by = (25-lines) * 8 / 2 + ((vid.height - 200)>>1);
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
@@ -217,7 +217,7 @@ static void SCR_DrawCenterString (void)
 		strncpy (temp, &scr_centerstring[StartC[i]], cnt);
 		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
-		M_Print2 (bx, by, temp);
+		M_Print (bx, by, temp);
 	}
 }
 
@@ -845,8 +845,8 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 	FindTextBreaks(message, PLAQUE_WIDTH);
 
-	by = (25-lines) * 8 / 2;
-	M_DrawTextBox2 (32, by - 16, PLAQUE_WIDTH + 4, lines + 2);
+	by = (25-lines) * 8 / 2 + ((vid.height - 200)>>1);
+	M_DrawTextBox (32, by - 16, PLAQUE_WIDTH + 4, lines + 2);
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
@@ -854,7 +854,7 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 		strncpy (temp, &message[StartC[i]], cnt);
 		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
-		M_Print2 (bx, by, temp);
+		M_Print (bx, by, temp);
 	}
 }
 
